force-app/main/default/objects/Outcome_Variable_Response_Configuration__c/Outcome_Variable_Response_Configuration__c.object-meta.xml
<CustomObject>
    <description>ExP OM: Defines valid user responses to Outcome Variables.</description>
    <label>Outcome Variable Response Configuration</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Outcome Variable Response Configurations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>