force-app/main/default/objects/Outcome_Variable_Response_Configuration__c/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Whether this outcome variable response configuration should be available for selection for a new Outcome Indicator</description>
    <inlineHelpText>Whether this outcome variable response configuration should be available for selection for a new Outcome Indicator</inlineHelpText>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>