force-app/main/default/objects/Outcome_Variable_Response_Configuration__c/fields/Is_Locked__c.field-meta.xml
<CustomField>
    <fullName>Is_Locked__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If locked, this configuration cannot be changed</description>
    <inlineHelpText>If locked, this configuration cannot be changed</inlineHelpText>
    <label>Is Locked</label>
    <type>Checkbox</type>
</CustomField>