force-app/main/default/objects/Outcome_Variable_Response_Configuration__c/fields/Negative_Value__c.field-meta.xml
<CustomField>
    <fullName>Negative_Value__c</fullName>
    <defaultValue>1</defaultValue>
    <description>Number indicating the most negative response possible.</description>
    <label>Negative Value</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>