force-app/main/default/objects/Outcome_Variable_Response_Configuration__c/fields/Positive_Value__c.field-meta.xml
<CustomField>
    <fullName>Positive_Value__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Number indicating the most positive response possible.</description>
    <label>Positive Value</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>