force-app/main/default/objects/Outcome_Variable_Response_Configuration__c/fields/Unanswered_Question_Weight_Scheme__c.field-meta.xml
<CustomField>
    <fullName>Unanswered_Question_Weight_Scheme__c</fullName>
    <description>How to weight unanswered questions when calculating raw values for indicators. Ignore - ignore unanswered questions; positive - use positive value for unanswered questions; negative - use negative value for unanswered questions; average - use average of positive and negative values for unanswered questions</description>
    <inlineHelpText>Weight unanswered questions. Ignore - ignore unanswered; positive - use positive value for unanswered; negative - use negative value for unanswered; average - use average of positive and negative values for unanswered</inlineHelpText>
    <label>Unanswered Question Weight Scheme</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Positive</fullName>
            </value>
            <value>
                <fullName>Negative</fullName>
            </value>
            <value>
                <fullName>Average</fullName>
            </value>
            <value>
                <fullName>Ignore</fullName>
                <default>true</default>
                <label>Ignore</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>