force-app/main/default/objects/Outcome_Variable_Response_Configuration__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Negative_Value__c</columns>
    <columns>Positive_Value__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>